; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_g.c_b43_nrssi_hw_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_g.c_b43_nrssi_hw_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32 }

@B43_PHY_NRSSILT_CTRL = common dso_local global i32 0, align 4
@B43_PHY_NRSSILT_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43_wldev*, i32, i64)* @b43_nrssi_hw_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b43_nrssi_hw_write(%struct.b43_wldev* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.b43_wldev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.b43_wldev* %0, %struct.b43_wldev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %8 = load i32, i32* @B43_PHY_NRSSILT_CTRL, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @b43_phy_write(%struct.b43_wldev* %7, i32 %8, i32 %9)
  %11 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %12 = load i32, i32* @B43_PHY_NRSSILT_DATA, align 4
  %13 = load i64, i64* %6, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @b43_phy_write(%struct.b43_wldev* %11, i32 %12, i32 %14)
  ret void
}

declare dso_local i32 @b43_phy_write(%struct.b43_wldev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
